fix: group name overflow

--- a/src/components/common/lists/sideList/SidePanelList.module.less
+++ b/src/components/common/lists/sideList/SidePanelList.module.less
@@ -51,5 +51,8 @@
 .text {
   margin-left: 20px;
   color: @common-font-color;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   .font-mixin(20px, 20px, 400);
 }
